--- a/Cadastro.html
+++ b/Cadastro.html
@@ -7,6 +7,8 @@
 		<meta charset="utf-8">
 		<title>Projeto PAS II</title>
 		<link rel="stylesheet" type="text/css" href="estilo.css">
+		<script type="text/javascript" src="jquery/jquery-1.9.1.js"></script>
+		<script src="jquery/jquery.js" type="text/javascript"></script>
 
 		<script language="JavaScript">
 			function valida(form) {
@@ -63,6 +65,7 @@
 					<li><a href="bolao.html">Bolão</a></li>
 					<li><a href="ranking.html">Ranking</a></li>
 					<li><a href="apostas.html">Apostas</a></li>
+					<li><a href="clubes.html">Clubes</a></li>
 					<li><a href="resultados.html">Resultados dos Jogos</a></li>
 					<li><a href="perfil.html">Perfil</a></li>
 					<li><a href="TelaAdmin.html">Administrador</a></li>
