--- a/TelaAdmin.html
+++ b/TelaAdmin.html
@@ -6,6 +6,8 @@
 		<meta charset="utf-8">
 		<title>Projeto PAS II</title>
 		<link rel="stylesheet" type="text/css" href="estilo.css">
+		<script type="text/javascript" src="jquery/jquery-1.9.1.js"></script>	
+		<script src="jquery/jquery.js" type="text/javascript"></script>
 	</head>
 	
 	
@@ -22,6 +24,7 @@
 					<li><a href="bolao.html">Bolão</a></li>
 					<li><a href="ranking.html">Ranking</a></li>
 					<li><a href="apostas.html">Apostas</a></li>
+					<li><a href="clubes.html">Clubes</a></li>
 					<li><a href="resultados.html">Resultados dos Jogos</a></li>
 					<li><a href="perfil.html">Perfil</a></li>
 					<li><a href="TelaAdminNovoBolao.html">Cadastrar Novo bolão</a></li>
