--- a/clubes.html
+++ b/clubes.html
@@ -6,8 +6,8 @@
 		<meta charset="utf-8">
 		<title>Projeto PAS II</title>
 		<link rel="stylesheet" type="text/css" href="estilo.css">
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script type="text/javascript" language="javascript">
+		<script type="text/javascript" src="jquery/jquery-1.9.1.js"></script>
+		<script src="jquery/jquery.js" type="text/javascript"></script>
 		   $(document).ready(function() {
 		      $("#driver").click(function(event){
 		          $.getJSON('http://bolaoshow.herokuapp.com/service/clubes', function(jd) {
